kubernetes/apps/default/home-assistant/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home2.f9.casa`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
      middlewares:
        - name: default-headers
          namespace: traefik
